made show action for users

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -188,6 +188,13 @@ ul.post-list {
     .daterange{
       width: 100%;
     }
+
+    .renter-full-name {
+      a {
+        color: black;
+      }
+
+    }
   }
 
   .flexslider{
