--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -87,7 +87,7 @@
         h5.subtitle = t('post.renter')
         hr
           = image_tag @post.user.profile_image, class: 'img-circle mx-2 my-2'
-          span.mr-2.renter-full-name = link_to @post.user.full_name, user_path(@post.user), target: '_blank'
+          span.mr-2.renter-full-name = link_to @post.user.full_name, user_path(@post.user)
           = send_message_icon(current_user, @post)
           = favorite_post_icon(current_user)
       .messaging data-conversation-url=conversations_path(sender_id: current_user.try(:id), recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user&.id data-post-id=@post.id
