updated post list to fit mobile platforms, some translations added

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -308,5 +308,13 @@ ul.post-list {
       }
     }
   }
+
+  ul.post-list {
+    .post-image {
+      width: 100%;
+      height: 220px;
+      margin-bottom: 15px;
+    }
+  }
 }
 
