--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -87,7 +87,7 @@
         hr
           = image_tag @post.user.profile_image, class: 'img-circle mx-2 my-2'
           span.mr-2.renter-full-name = link_to @post.user.full_name, user_path(@post.user)
-          = send_message_icon(current_user, @post)
+          = send_message_icon(current_user) unless current_user&.my_post?(@post)
           = favorite_post_icon(current_user)
       .messaging data-conversation-url=conversations_path(sender_id: current_user.try(:id), recipient_id: @post.user.id, format: 'json') data-current-user-id=current_user&.id data-post-id=@post.id
       .subtitle-container
@@ -100,4 +100,4 @@
   - if current_ability.can?(:edit, @post)
     = link_to t('post.edit'), edit_post_path(@post), class: 'btn btn-app btn-edit'
 
-= render 'shared/modals/contact_renter_modal', post: @post  unless current_user&.my_post?(@post)
+= render 'shared/modals/contact_renter_modal', sender: current_user, recipient: @post.user, post: @post, subject: @post.title unless current_user&.my_post?(@post)
