--- a/app/views/shared/modals/_contact_renter_modal.slim
+++ b/app/views/shared/modals/_contact_renter_modal.slim
@@ -1,20 +1,26 @@
-#modalContactForm.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" data-url=conversations_path(sender_id: current_user&.id, recipient_id: @post.user.id)
+- post      ||= nil
+- subject   ||= nil
+
+#modalContactForm.modal.fade aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" data-url=conversations_path(sender_id: sender.id, recipient_id: recipient.id)
   .modal-dialog role="document"
     .modal-content
       .modal-header.text-center
-        h6.modal-title.w-100.font-weight-bold =  "Send message to #{@post.user.full_name}"
+        h6.modal-title.w-100.font-weight-bold = t('user.messaging.send_message_to', user: recipient.full_name)
         button.close aria-label="Close" data-dismiss="modal" type="button"
           span aria-hidden="true"  &times;
       .modal-body.mx-3
         .md-form.mb-5
-          i.fas.fa.fa-tag.prefix.grey-text.mr-2
-          label data-error="wrong" data-success="right" for="form32"  Subject
-          input#form32.form-control.validate type="text" value="#{@post.title}" disabled=true /
+          - if subject.present?
+            i.fas.fa.fa-tag.prefix.grey-text.mr-2
+            label data-error="wrong" data-success="right" for="form32" = t('user.messaging.subject')
+            input#form32.form-control.validate type="text" value="#{subject}" disabled=true /
         .md-form
           i.fas.fa.fa-pencil.prefix.grey-text.mr-2
-          label data-error="wrong" data-success="right" for="form8"  Your message
+          label data-error="wrong" data-success="right" for="form8" = t('user.messaging.your_message')
           textarea#form8.md-textarea.form-control.js-message-container rows="4" type="text"
       .modal-footer.d-flex.justify-content-center
-        button.btn.btn-unique.js-send-message
-          | Send
+        button.btn.btn-unique.js-send-message.btn-app
+          = t('user.messaging.send')
           i.fas.fa.fa-paper-plane-o.ml-1
+
+.messaging data-conversation-url=conversations_path(sender_id: sender.id, recipient_id: recipient.id, format: 'json') data-current-user-id=sender.id data-post-id=post&.id
