--- a/app/views/layouts/home.slim
+++ b/app/views/layouts/home.slim
@@ -9,7 +9,7 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag google_map_url
-  body
+  body data-locale=I18n.locale
     = render 'layouts/navbar'
     = yield
   = render 'layouts/footer'
