messages translations, enhancements

--- a/app/assets/stylesheets/messages.scss
+++ b/app/assets/stylesheets/messages.scss
@@ -198,4 +198,10 @@ ul.inbox-sidebar-list{
   font-size: 18px;
   text-align: center;
   color: #fff;
+  a {
+    color: #fff;
+  }
+  a:hover {
+    color: black;
+  }
 }
