post controller stuff, reserve button, added confirmation of reservation

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,6 +7,8 @@
 @import 'datatable';
 @import 'navbar';
 @import 'direct_upload';
+@import 'reservation';
+
 
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
