added currency and currecy price to app

--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -63,6 +63,8 @@
             .col-md-6
               = f.input :hp
             .col-md-6
+              = f.input :currency_id, as: :select, collection: Currency.all.map(&:code), selected: Currency::BAM
+            .col-md-6
               = f.input :price
             .col-md-12
               h3 Address
