--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -47,7 +47,7 @@
         h5.subtitle = t('post.renter')
         hr
           = image_tag @post.user.profile_image, class: 'img-circle mx-2 my-2'
-          span.mr-2.renter-full-name = link_to @post.user.full_name, user_path(@post.user)
+          span.mr-2.renter-full-name = link_to @post.user.full_name, user_path(@post.user.slug)
           = send_message_icon(current_user) unless current_user&.my_post?(@post)
           = favorite_post_icon(current_user)
       .subtitle-container
