--- a/app/views/shared/modals/_confirm_password_modal.slim
+++ b/app/views/shared/modals/_confirm_password_modal.slim
@@ -10,6 +10,6 @@
         .md-form
           i.fas.fa.fa-key.prefix.grey-text.mr-2
           label data-error="wrong" data-success="right" for="form8"  Enter your password to confirm changes
-          input#form8.form-control.js-current-password type="password" name="user[current_password]"
+          input#form8.form-control.js-current-password type="password" name="user[current_password]" autocomplete='nonsense'
       .modal-footer.d-flex.justify-content-center
         input type="submit" name="commit" value="Update User" class="btn btn btn-primary mt-2" data-disable-with="Update User"
