--- a/app/views/users/registrations/edit.slim
+++ b/app/views/users/registrations/edit.slim
@@ -13,7 +13,7 @@
           = f.input :last_name, autofocus: true, autocomplete: "last_name"
 
         .field
-          = f.input :locale, as: :select, collection: Users::Locales::ALL
+          = f.input :locale, as: :select, collection: locale_collection
 
         - if devise_mapping.confirmable? && resource.pending_reconfirmation?
           div = "Currently waiting confirmation for: #{resource.unconfirmed_email}"
