--- a/app/views/posts/_availability_form.slim
+++ b/app/views/posts/_availability_form.slim
@@ -13,13 +13,7 @@
           = button_tag t('post.check'), class: 'btn btn-search js-check-availability btn-success btn-sm', style: 'width: 100%; height: 38px;'
   .row
     .col-md-12
-      .available style='display:none;'
-        = inline_svg 'check.svg', style: 'height: 40px; display: inline;'
-        span = t('post.car_available')
-        span = t('post.car_available')
-        span = button_tag car_icon(t('post.reserve').upcase), class: 'btn js-rent btn-success btn btn-reserve', style: 'width: 100%'
+      = post_available_container(available)
   .row
     .col-md-12
-      .not-available style='display:none;'
-        = inline_svg 'letter-x.svg', style: 'height: 30px; display: inline;'
-        span = t('post.car_unavailable')
+      = post_not_available_container(available)
