--- a/app/views/users/registrations/edit.slim
+++ b/app/views/users/registrations/edit.slim
@@ -42,7 +42,7 @@
           = render 'shared/modals/confirm_password_modal'
 
         .actions
-          = link_to "Update user", '#', class: 'btn btn-sm btn-primary btn-rounded js-update-user mt-2', data: { target: "#confirm-changes-modal", toggle: "modal" }
+          = link_to "Update user", '#', class: 'btn btn-sm btn-app btn-rounded js-update-user mt-2', data: { target: "#confirm-changes-modal", toggle: "modal" }
 
       .col-md-6
         .input-group
