--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
-  a.navbar-brand href=root_path  RentajteME
+  a.navbar-brand href=root_path  VOZILICA
   button.navbar-toggler data-target="#collapsibleNavbar" data-toggle="collapse" type="button"
     span.navbar-toggler-icon
   #collapsibleNavbar.collapse.navbar-collapse
@@ -7,7 +7,7 @@ nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
       - if current_user
         = navbar_item(profile_index_path, :profile, nil)
         = navbar_item(conversations_path, :messages, current_user)
-        = navbar_item(root_path, :ducats, current_user, 'text-warning')
+        = navbar_item(ducats_path, :ducats, current_user, 'text-warning')
     ul.navbar-nav.ml-auto.text-white.js-navbar-right
       - if current_user
         .mt-2.mr-3.text-center = current_user.full_name
