--- a/app/views/layouts/_navbar.slim
+++ b/app/views/layouts/_navbar.slim
@@ -1,5 +1,5 @@
 nav.navbar.navbar-expand-sm.bg-dark.navbar-dark
-  a.navbar-brand href=root_path  RentajteME
+  = link_to navbar_logo, root_path
   button.navbar-toggler data-target="#collapsibleNavbar" data-toggle="collapse" type="button"
     span.navbar-toggler-icon
   #collapsibleNavbar.collapse.navbar-collapse
