post edit changes ui

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -67,6 +67,7 @@
   .navbar {
     .navbar-brand {
       font-size: 17px;
+      height: 35px !important;
     }
     .add-post {
       display: none;
