--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -119,6 +119,10 @@ ul.post-list {
 }
 
 .post-form-container {
+
+  .nav-link {
+    color: $app-blue
+  }
   .calendar-container {
     width: 100%;
   }
