--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -26,16 +26,16 @@
           h3 New rental
         ul#edit-post-tab-list.nav.nav-tabs.nav-justified.md-tabs.indigo role="tablist"
           li.nav-item
-            = link_to info_circle_icon(t('post.edit.main_info'), 'fa-lg'), '#main-info-tab', class: 'nav-link active', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'home-just' }, role: 'tab'
+            = link_to info_circle_icon(t('post.edit_pane.main_info'), 'fa-lg'), '#main-info-tab', class: 'nav-link active', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'home-just' }, role: 'tab'
 
           li.nav-item
-            = link_to info_circle_icon(t('post.edit.other_info'), 'fa-sm'), '#other-info-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'profile-just' }, role: 'tab'
+            = link_to info_circle_icon(t('post.edit_pane.other_info'), 'fa-sm'), '#other-info-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'profile-just' }, role: 'tab'
           li.nav-item
-            = link_to camera_icon(t('post.edit.photos')), '#photos-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
+            = link_to camera_icon(t('post.edit_pane.photos')), '#photos-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
           li.nav-item
-            = link_to money_icon(t('post.edit.price')), '#price-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
+            = link_to money_icon(t('post.edit_pane.price')), '#price-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
           li.nav-item
-            = link_to calendar_icon(t('post.edit.schedule')), '#schedule-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
+            = link_to calendar_icon(t('post.edit_pane.schedule')), '#schedule-tab', class: 'nav-link', data: { toggle: "tab" }, aria: { selected: 'false', controls: 'contact-just' }, role: 'tab'
 
         #edit-post-tab.tab-content.card.pt-5
           #main-info-tab.tab-pane.fade.show.active aria-labelledby="home-tab-just" role="tabpanel"
