Initial authentication UI

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,4 +1,5 @@
 @import 'custom/colors';
+@import 'custom/authentication';
 @import 'custom/spinner';
 @import 'home';
 @import 'posts';
@@ -9,6 +10,7 @@
 @import 'navbar';
 @import 'direct_upload';
 @import 'reservation';
+
 
 body {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
