--- a/app/views/ducats/index.slim
+++ b/app/views/ducats/index.slim
@@ -1,141 +1,165 @@
+= javascript_include_tag paypal_url
+
 .ducats-container
   h5 Your current ducat count is
 
   i.mr-2 = @ducat_count
   i.fa.fa-coins.text-warning.mb-5
   br
-  = button_tag 'Add more ducats', class: 'btn btn-app'
+  / = button_tag 'Add more ducats', class: 'btn btn-app'
 
-  section.pricing.py-5
-    .container
-      .row
-        /! Free Tier
-        .col-lg-4
-          .card.mb-5.mb-lg-0
-            .card-body
-              h5.card-title.text-muted.text-uppercase.text-center Free
-              h6.card-price.text-center
-                | $0
-                span.period |  month
-              hr/
-              ul.fa-ul
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Single User
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | 5GB Storage
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Unlimited Private Projects
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Dedicated Phone Support
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Free Subdomain
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
-        /! Plus Tier
-        .col-lg-4
-          .card.mb-5.mb-lg-0
-            .card-body
-              h5.card-title.text-muted.text-uppercase.text-center Plus
-              h6.card-price.text-center
-                | $9
-                span.period | month
-              hr/
-              ul.fa-ul
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong 5 Users
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | 50GB Storage
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Private Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Dedicated Phone Support
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Free Subdomain
-                li.text-muted
-                  span.fa-li
-                    i.fas.fa-times
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
-        /! Pro Tier
-        .col-lg-4
-          .card
-            .card-body
-              h5.card-title.text-muted.text-uppercase.text-center Pro
-              h6.card-price.text-center
-                | $49
-                span.period | month
-              hr/
-              ul.fa-ul
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong Unlimited Users
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | 150GB Storage
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Public Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Community Access
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Unlimited Private Projects
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Dedicated Phone Support
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  strong Unlimited
-                  | Free Subdomains
-                li
-                  span.fa-li
-                    i.fas.fa-check
-                  | Monthly Status Reports
-              a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
+  / section.pricing.py-5
+  /   .container
+  /     .row
+  /       /! Free Tier
+  /       .col-lg-4
+  /         .card.mb-5.mb-lg-0
+  /           .card-body
+  /             h5.card-title.text-muted.text-uppercase.text-center Free
+  /             h6.card-price.text-center
+  /               | $0
+  /               span.period |  month
+  /             hr/
+  /             ul.fa-ul
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Single User
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | 5GB Storage
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Unlimited Public Projects
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Community Access
+  /               li.text-muted
+  /                 span.fa-li
+  /                   i.fas.fa-times
+  /                 | Unlimited Private Projects
+  /               li.text-muted
+  /                 span.fa-li
+  /                   i.fas.fa-times
+  /                 | Dedicated Phone Support
+  /               li.text-muted
+  /                 span.fa-li
+  /                   i.fas.fa-times
+  /                 | Free Subdomain
+  /               li.text-muted
+  /                 span.fa-li
+  /                   i.fas.fa-times
+  /                 | Monthly Status Reports
+  /             a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
+  /       /! Plus Tier
+  /       .col-lg-4
+  /         .card.mb-5.mb-lg-0
+  /           .card-body
+  /             h5.card-title.text-muted.text-uppercase.text-center Plus
+  /             h6.card-price.text-center
+  /               | $9
+  /               span.period | month
+  /             hr/
+  /             ul.fa-ul
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 strong 5 Users
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | 50GB Storage
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Unlimited Public Projects
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Community Access
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Unlimited Private Projects
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Dedicated Phone Support
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Free Subdomain
+  /               li.text-muted
+  /                 span.fa-li
+  /                   i.fas.fa-times
+  /                 | Monthly Status Reports
+  /             a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
+  /       /! Pro Tier
+  /       .col-lg-4
+  /         .card
+  /           .card-body
+  /             h5.card-title.text-muted.text-uppercase.text-center Pro
+  /             h6.card-price.text-center
+  /               | $49
+  /               span.period | month
+  /             hr/
+  /             ul.fa-ul
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 strong Unlimited Users
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | 150GB Storage
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Unlimited Public Projects
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Community Access
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Unlimited Private Projects
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Dedicated Phone Support
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 strong Unlimited
+  /                 | Free Subdomains
+  /               li
+  /                 span.fa-li
+  /                   i.fas.fa-check
+  /                 | Monthly Status Reports
+  /             a.btn.btn-block.btn-primary.text-uppercase href="#"  Button
+
+div
+  = form_tag({:controller => "users", :action => "add_ducats" }, {:id => 'order-details'}) do
+    input id='order-type' type="hidden" value="stripe" name='orders[payment_gateway]'
+    .form_row
+      h4 Charges/Payment
+      = radio_button_tag 'ducat_number', '10', true
+      span 100 ducats for 10 BAM
+      br
+      = radio_button_tag 'ducat_number', '20', false
+      span 250 ducats for 20 BAM
+      br
+      = radio_button_tag 'ducat_number', '50', false
+      span 700 ducats for 50 BAM
+      br
+    hr
+    h1 Payment Method
+
+    div id='tab-paypal' class='active paymentSelectionTab'
+      div id="submit-paypal"
+    br
+    hr
