--- a/app/views/layouts/home.slim
+++ b/app/views/layouts/home.slim
@@ -6,6 +6,7 @@ html
     = csp_meta_tag
     meta name="viewport" content="width=device-width, initial-scale=1"
 
+    = favicon_link_tag asset_path('favicon.png')
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
     = javascript_include_tag google_map_url
