added page loader

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,6 +17,6 @@ html
     .container
       = yield
   = render 'layouts/footer'
-
+  = render 'shared/page_loader'
 = render 'layouts/flash_messages'
 
