--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -131,3 +131,32 @@ body {
   background: #CFDBE1;
   color: black;
 }
+
+.ui-page-loader {
+  width:100%;
+  height:100%;
+  top:0;
+  padding: 0;
+  margin: 0;
+  background: rgba(0, 0, 0, 0.4);
+  display:none;
+  position: fixed;
+  z-index:100;
+
+  .loader {
+    margin-top: 230px;
+  }
+
+  .text-container {
+    background: $app-blue;
+    margin: 0 590px;
+    border-radius: 5px;
+    text-align: center;
+  }
+
+  @media (max-width: 992px) {
+    .text-container {
+      margin: 0 110px;
+    }
+  }
+}
