ducats index enhancements, enhancements in scss, fix bug w payment gateway

--- a/app/assets/stylesheets/custom/_colors.scss
+++ b/app/assets/stylesheets/custom/_colors.scss
@@ -2,3 +2,5 @@ $app-blue-main: #415171;
 $app-blue-dark: #323E5F;
 $app-blue: #05728f;
 $app-blue-light: #CFDBE1;
+$app-orange: #FEC349;
+$app-gray: #ededed;
