--- a/app/views/shared/_page_loader.slim
+++ b/app/views/shared/_page_loader.slim
@@ -1,4 +1,4 @@
 .ui-page-loader.js-ui-page-loader
   .loader
   .text-container
-    p.text-white = 'Submiting...'
+    p.text-white = t('submitting')
